# mvp

./: CMakeLists.txt  README.md
src/: appstate.hpp  ass.hpp  ffmpeg.hpp  gui.hpp  main.cpp  thread.hpp  utils.hpp
